--- a/ODK.Web.Razor/wwwroot/css/_social-media.scss
+++ b/ODK.Web.Razor/wwwroot/css/_social-media.scss
@@ -21,5 +21,9 @@
         display: flex;
         justify-content: center;        
         color: var(--bs-body-color);
+
+        &:hover {
+            opacity: 0.6;
+        }
     }
 }
