--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -26,6 +26,7 @@
 @import "_modal";
 @import "_navbar";
 @import "_overlay";
+@import "_panels";
 @import "_paragraphs";
 @import "_sections";
 @import "_side-menu";
