--- a/ODK.Web.Razor/Views/Shared/Components/_Location.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Location.cshtml
@@ -1,4 +1,5 @@
 ﻿@model string
 
-<i class="fa-solid fa-location-dot"></i>
-<span>@Model</span>
+<div class="d-flex align-items-center gap-2">
+    <i class="fa-solid fa-location-dot"></i><span>@Model</span>
+</div>
