--- a/ODK.Web.Razor/Views/Shared/Events/_EventList.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventList.cshtml
@@ -2,10 +2,10 @@
 @using ODK.Web.Razor.Models.Events
 @model EventListViewModel
 
-<div class="row">
+<div class="event-list">
     @foreach (var @event in Model.Events)
     {
-        <div class="col-12 @(Model.FullWidth ? null : "col-md-4")">
+        <div class="list-event @(Model.FullWidth ? "list-event--full-width" : null)">
             @await Html.PartialAsync("Events/_ListEvent", new ListEventViewModel
             {
                 Chapter = Model.Chapter,
