--- a/ODK.Web.Razor/wwwroot/css/_events.scss
+++ b/ODK.Web.Razor/wwwroot/css/_events.scss
@@ -1,3 +1,9 @@
+.event-list {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
 .event-response-option {
 	font-size: 1.2em;
   display: inline-flex;
