--- a/ODK.Web.Razor/wwwroot/css/bootstrap/_variables.scss
+++ b/ODK.Web.Razor/wwwroot/css/bootstrap/_variables.scss
@@ -2,6 +2,8 @@ $border-radius:               0 !default;
 $border-radius-lg:            0 !default;
 $border-radius-sm:            0 !default;
 
+// $body-bg: #e9ecef;
+
 $primary: #2370c1;
 $success: #3aa051;
 
