--- a/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
@@ -19,7 +19,9 @@
         Content = 
             @<div>
                 <h2>Change password</h2>
-                @await Html.PartialAsync("Account/_ChangePasswordContent")
+                <section class="section">
+                    @await Html.PartialAsync("Account/_ChangePasswordContent")
+                </section>
             </div>
     })
 })
