--- a/ODK.Web.Razor/Pages/Account/Location.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Location.cshtml
@@ -32,19 +32,22 @@
         Content = 
             @<div>
                 <h2>Location</h2>
-                <form action="/account/location" method="post">
-                    @Html.AntiForgeryToken()
-                    @await Html.PartialAsync("Account/_LocationForm", new LocationFormViewModel
-                    {
-                        DistanceUnit = memberPreferences?.DistanceUnit?.Id,
-                        DistanceUnitOptions = distanceUnitOptions,
-                        Lat = location?.LatLong.Lat,
-                        Long = location?.LatLong.Long,
-                        Name = location?.Name ?? "",
-                        TimeZoneId = member.TimeZone?.Id ?? Member.DefaultTimeZoneId
-                    })
-                    <button class="btn btn-primary">Update</button>
-                </form>
+
+                <section class="section">
+                    <form action="/account/location" method="post">
+                        @Html.AntiForgeryToken()
+                        @await Html.PartialAsync("Account/_LocationForm", new LocationFormViewModel
+                        {
+                            DistanceUnit = memberPreferences?.DistanceUnit?.Id,
+                            DistanceUnitOptions = distanceUnitOptions,
+                            Lat = location?.LatLong.Lat,
+                            Long = location?.LatLong.Long,
+                            Name = location?.Name ?? "",
+                            TimeZoneId = member.TimeZone?.Id ?? Member.DefaultTimeZoneId
+                        })
+                        <button class="btn btn-primary">Update</button>
+                    </form>
+                </section>                
             </div>
     })
 })
