--- a/ODK.Web.Razor/Pages/Account/Picture.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Picture.cshtml
@@ -25,13 +25,16 @@
         Content =
             @<div>
                 <h2>Picture</h2>
-                @await Html.PartialAsync("Account/_UpdatePictureContent", new UpdatePictureViewModel
-                {
-                    Avatar = viewModel.Avatar,
-                    Chapter = null,
-                    Image = viewModel.Image,
-                    Member = viewModel.CurrentMember                    
-                })
+                
+                <section class="section">
+                    @await Html.PartialAsync("Account/_UpdatePictureContent", new UpdatePictureViewModel
+                    {
+                        Avatar = viewModel.Avatar,
+                        Chapter = null,
+                        Image = viewModel.Image,
+                        Member = viewModel.CurrentMember                    
+                    })
+                </section>
             </div>
     })
 })
